# bullnym

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  config.example.toml  config.toml  release-manifest.toml
.cargo/: config.local.toml.example
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
archive/: README.md
archive/plans/: README.md
archive/research/: README.md  bullnym-trust-minimization-audit-and-strategies.md  lud-22-vs-mrh.md  satora-bitcoin-to-liquid.md
archive/testing-evidence/: README.md  product-surface-coverage.md  redteam-2026-05-07.md
docs/: README.md  alias-slugs-client-integration.md  api-reference.md  architecture.md  compatibility-ledger.md  lud-22-currency-negotiation.md  lud-22-vs-mrh-research.md  nginx-bullpay.conf.snippet  payment-architecture.md  product-surface-coverage.md  redteam-2026-05-07.md  runbook-stuck-swap.md  swap-manifest-delivery-ledger.md  swap-manifest-store-s3.md  swap-manifest-v1.md  swap-manifest-witness-loader.md
docs/adr/: 001-product-and-feature-boundaries.md  002-deterministic-wallet-purposes.md  003-wallet-manifest-and-recovery.md  004-nostr-identity-role-separation.md  005-bullnym-mobile-protocol-contract.md  006-payment-rails-and-settlement.md  007-donation-page-allocation-and-rate-limits.md  008-btcpay-and-samrock-pairing.md  009-payment-coordination-trust-boundary.md  010-legacy-media-read-only.md  README.md  template.md  (+1 more)
examples/: recover_probe.rs
migrations/: 001_initial.sql  002_swap_claim_state.sql  003_swap_key_sequence.sql  004_cleanup_dns_add_comment.sql  005_nym_lifecycle.sql  006_outpoint_addresses.sql  007_rate_limit_counters.sql  008_nym_access_events.sql  009_users_last_callback_at.sql  010_outpoint_addresses_pending_index.sql  011_processed_webhook_events.sql  012_users_nym_on_update_cascade.sql  013_users_nym_no_cascade.sql  014_users_has_been_used.sql  015_swap_records_address_nullable.sql  016_donation_pages.sql  017_donation_allocations_paid_at.sql  018_claim_idempotency_and_lifecycle.sql  019_invoices.sql  020_pre_get_paid_user_wipe.sql  021_get_paid_invoice_extras.sql  022_relax_liquid_pair_chk.sql  023_server_authoritative_currencies.sql  024_invoice_payment_events.sql  025_chain_swap_records.sql  026_chain_swap_claim_bookkeeping.sql  027_invoice_payment_addresses.sql  028_invoice_payment_event_evidence.sql  029_checkout_underpaid_liquid_watch.sql  030_invoice_payment_observations.sql  032_pos_mode.sql  033_nip05_optional.sql  034_donation_pages_kind.sql  035_chain_swap_cooperative_refused.sql  036_chain_swap_refund_due.sql  037_chain_swap_renegotiation.sql  038_chain_swap_refunding.sql  039_reconciler_round_robin.sql  040_donation_pages_alias.sql  041_invoices_public_slug.sql  (+31 more)
plans/: boltz-core-stablecoin-to-lbtc-reliability.md  boltz-stablecoin-payment-page.md  bullnym-trust-minimization-audit-and-strategies.md  chain-swap-recovery-detection-server.md  chain-swap-reliability-v3.md  multi-output-swaps.md  permanent-public-names-server.md  public-name-reservation-policy.md  recovery-v2.md  repository-documentation-reorganization.md  satora-bitcoin-to-liquid.md  two-output-claim-research.md
pwa/: package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-release.sh  certify-deployment.py  check-config-docs.sh  check-direct-lifecycle-rollback.py  check-docs.sh  check-migration-053-boundary.sh  check-migration-055-boundary.sh  check-migration-056-boundary.sh  check-migration-057-boundary.sh  check-migration-058-boundary.sh  check-migration-059-boundary.sh  content-sha256.py  deploy.sh  issue64-offline-smoke.sh  release-preflight.sh  seed-smoke-nyms.sh  test-certify-deployment.py  test-db.sh  test-direct-lifecycle-rollback.sh  test-issue64-offline-smoke.sh  test-migration-053-production-topology.sh  test-migration-053-runtime-role.sh  test-release-provenance.sh  test-release-record.sh  test-renegotiation-rollback.sh  test-swap-manifest-delivery-minio.sh  test-swap-manifest-store-minio.sh  verify-release-provenance.sh  verify-release-record.sh  write-release-record.sh
src/: admission.rs  auth.rs  bitcoin_fee_adapter.rs  bitcoin_watcher.rs  boltz.rs  boltz_breaker.rs  boltz_restore.rs  boltz_restore_fetch.rs  boltz_transport.rs  builder_fee.rs  bull_bitcoin.rs  bull_bitcoin_claim.rs  bull_bitcoin_settlement.rs  canonical_json.rs  certification.rs  chain_fallback.rs  chain_fault_harness.rs  chain_lockup_witness_adapter.rs  chain_lockup_witness_adapter_tests.rs  chain_lockup_witness_audit.rs  chain_lockup_witness_audit_tests.rs  chain_recovery.rs  chain_swap_action.rs  chain_swap_creation_permit.rs  chain_swap_primary_source.rs  chain_swap_renegotiation.rs  chain_swap_runtime.rs  chain_swap_runtime_evidence.rs  chain_swap_stale_restore.rs  chain_watcher.rs  claimer.rs  config.rs  cooperative_bitcoin_refund.rs  current_fee_snapshot.rs  db.rs  derivation_guard.rs  descriptor.rs  dns.rs  donation_callback.rs  donation_page.rs  (+56 more)
templates/: donation_404.html  donation_archived.html  donation_page.html  invoice_payment.html  store_amount.html
tests/: chain_swap_action_fixtures.rs  chain_swap_creation_permit.rs  chain_swap_renegotiation_domain.rs  chain_swap_runtime_regressions.rs  integration_test.rs  invoice_memo_privacy.rs  issue64_completion_evidence.rs  public_names_test.rs  swap_manifest_store_minio.rs
(+318 files in other folders)
