[package]
name = "pay-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate"] }
lwk_wollet = "0.14.0"
boltz-client = { path = "../boltz/boltz-rust", features = ["electrum"] }
secp256k1 = { version = "0.29", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dotenvy = "0.15"
tokio-util = "0.7"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
