[package]
name = "pay-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate", "json"] }
lwk_wollet = "0.14.0"
lwk_common = "0.14.0"
elements-miniscript = "0.4.0"
# Bitcoin mainnet address validation for invoice handlers (validators.rs).
# Only needed for parse + network-discriminate; no chainstate, no descriptors.
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
boltz-client = { git = "https://github.com/BullishNode/boltz-rust.git", rev = "bbf3ee8048b638a80c23e1bcecff77ee3dc89ec3", features = ["electrum"] }
lightning-invoice = "0.32"
secp256k1 = { version = "0.29", features = ["global-context"] }
# MuSig2 is the same pinned implementation used by boltz-client. Bullnym uses
# it directly so the exact cooperative request can be journaled before the
# provider signature endpoint is called.
secp256k1_musig = { package = "secp256k1", version = "=0.32.0-beta.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
toml = "0.8"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
zeroize = "1"
chacha20poly1305 = "0.10"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dotenvy = "0.15"
tokio-util = "0.7"
async-trait = "0.1"
futures-util = "0.3"
object_store = { version = "=0.13.2", default-features = false, features = ["aws"] }
electrum-client = "0.21"
ipnet = "2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
dashmap = "6"
askama = "0.12"
askama_axum = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Deterministic generated social-card rendering.
image = "0.25"
# Deterministic multilingual shaping/rasterization for generated social cards.
cosmic-text = { version = "0.19", default-features = false, features = ["std", "swash"] }
unicode-segmentation = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["test-util"] }
